# aoc2021

./: .gitignore  Cargo.toml  LICENSE  README.md  day1-1.rs  day1-2.rs  day2-1.rs  day2-2.rs  day3-1.rs  day3-2.rs  day4-1.rs  day4-2.rs  log.txt
day10-1/: Cargo.toml
day10-1/src/: main.rs
day10-2/: Cargo.toml
day10-2/src/: main.rs
day11-1/: Cargo.toml
day11-1/src/: main.rs
day11-2/: Cargo.toml
day11-2/src/: main.rs
day12-1/: Cargo.toml
day12-1/src/: main.rs
day12-2/src/: main.rs
day13-1/: Cargo.toml
day13-1/src/: main.rs
day13-2/: Cargo.toml
day13-2/src/: main.rs
day14-1/: Cargo.toml
day14-1/src/: main.rs
day14-2/src/: main.rs
day15-1/: Cargo.toml
day15-1/src/: main.rs
day15-2/: Cargo.toml
day15-2/src/: main.rs
day16-1/: Cargo.toml
day16-1/src/: main.rs
day16-2/: Cargo.toml
day16-2/src/: main.rs
day17-1/: Cargo.toml
day17-1/src/: main.rs
day17-2/src/: main.rs
day18-1/: Cargo.toml
day18-1/src/: main.rs
day18-2/src/: main.rs
day19-1/: Cargo.toml
day19-1/src/: main.rs
day19-2/: Cargo.toml
day19-2/src/: main.rs
day20-1/: Cargo.toml
day20-1/src/: main.rs
day20-2/: Cargo.toml
day21-1/: Cargo.toml
day21-2/: Cargo.toml
day22-1/: Cargo.toml
day22-2/: Cargo.toml
day23-1/: Cargo.toml
day23-2/: Cargo.toml
day24-1/: Cargo.toml  notes.txt
day24-2/: Cargo.toml
day25-1/: Cargo.toml
day4-2/: Cargo.toml
day5-1/: Cargo.toml
day5-2/: Cargo.toml
day6-1/: Cargo.toml
day6-2/: Cargo.toml
day7-1/: Cargo.toml
day7-2/: Cargo.toml
day9-1/: Cargo.toml
day9-2/: Cargo.toml
(+20 files in other folders)
