[workspace]
members = [
  "day4-2",
  "day5-1", "day5-2",
  "day6-1", "day6-2",
  "day7-1", "day7-2",
  "day8-1", "day8-2",
  "day9-1", "day9-2",
  "day10-1", "day10-2",
  "day11-1", "day11-2",
  "day12-1", "day12-2",
  "day13-1", "day13-2",
  "day14-1", "day14-2",
  "day15-1", "day15-2",
  "day16-1", "day16-2",
  "day17-1", "day17-2",
]
